revert batch send to JsonArray. string[] send in uri and maxes out